# otus11_mapReduce

./: CMakeLists.txt
libs/: CMakeLists.txt  MapReduce.cpp  MapReduce.h  queue.h
src/: CMakeLists.txt  main.cpp
test/: test1
